# godust

./: Cargo.toml  LICENSE  README.md  make.sh
.github/workflows/: release-binaries.yml  rust.yml
assets/: setup_cli.md
src/: generators.rs  main.rs  pipeline.rs  utils.rs
src/generators/: blank.rs  blank_ecs.rs
src/models/: project.rs
src/pipeline/: boilerplate.rs  structure.rs  template_parser.rs
src/pipeline/templates/: blank.rs  mod.rs
src/templates/base/: Main.tscn.template  main.tscn.template
src/templates/blank/: Main.tscn.tera
src/templates/blank/{{project_name}}_core/: Cargo.toml.tera
src/templates/blank/{{project_name}}_core/src/: lib.rs.tera
src/templates/blank_ecs/: Cargo.toml.tera
src/templates/blank_ecs/{{project_kebab_name}}/: Main.tscn.tera  extension.gdextension.tera  project.godot.tera
src/templates/blank_ecs/{{project_name}}_core/src/: examples.rs.tera  lib.rs.tera
src/templates/blank_ecs/{{project_name}}_core/src/examples/: entity_spawner.rs.tera
src/utils/: crates_version.rs  naming.rs  project.rs  rendering_method.rs  template_parser.rs  template_processing.rs  uid_generator.rs
