[package]
name = "godust"
version = "0.0.5"
edition = "2024"
description = "Godust - CLI tool for Godot Engine template generation"
authors = ["contato.viniciusdonatto@gmail.com"]
license = "MIT"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["rt-multi-thread"] }
