[package]
name = "godust"
version = "0.0.6"
edition = "2024"
description = "Godust - CLI tool for Godot Engine template generation"
authors = ["contato.viniciusdonatto@gmail.com"]
license = "MIT"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
